--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -191,7 +191,6 @@ nlu:
     - good bye
     - good bye rasa bot!
     - good night
-    - goodbye
     - goodbye.
     - goodnight
     - gotta go
@@ -533,8 +532,6 @@ nlu:
     - come back
     - cool! can I do something else here?
     - hello what can you do for me
-    - help
-    - help me
     - help please
     - help pls
     - help?
@@ -557,7 +554,6 @@ nlu:
     - talk to human
     - i want human :(
     - can i talk to human
-    - i want to talk to a human
     - i want to speak to human
     - can i talk to a real person?
     - connect me to a real person
@@ -591,15 +587,23 @@ nlu:
     - Can you make sandwiches?
     - Can you please send me an uber
     - ofif fsdfafsfs
+    - My [brother](PERSON).
+    - [Justice](credit_card).
 - synonym: credit
   examples: |
     - credit card
+    - card
     - credit cards
     - credit account
     - credit accounts
-    - card
     - cards
     - credit card account
+- synonym: deposit
+  examples: |
+    - incoming
+- synonym: spend
+  examples: |
+    - outgoing
 - synonym: emblem
   examples: |
     - emblm
